[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SoldTransactionView.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/JosefinSansRegular-x3LYV.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="SoldTransactionView" type="Control" groups=[
"Transaction",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -104.0
margin_bottom = -540.0
rect_min_size = Vector2( 920, 60 )
size_flags_horizontal = 3
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 920, 60 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="CenterContainer"]
visible = false
margin_top = 2.0
margin_right = 920.0
margin_bottom = 58.0
rect_min_size = Vector2( 920, 56 )
color = Color( 0.87451, 0.435294, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 920.0
margin_bottom = 60.0
rect_min_size = Vector2( 920, 60 )

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 4.0
rect_min_size = Vector2( 920, 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 920.0
margin_bottom = 60.0
rect_min_size = Vector2( 920, 52 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlankSpace" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 52.0
rect_min_size = Vector2( 40, 52 )

[node name="DateSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 144.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "02/17/2021"
align = 1
valign = 1
autowrap = true

[node name="NumberOfCoins" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer" groups=[
"NumberOfCoins-Trans",
]]
margin_left = 148.0
margin_right = 287.0
margin_bottom = 52.0
rect_min_size = Vector2( 139, 52 )
text = "0.001920220"
align = 1
valign = 1
autowrap = true

[node name="ExchangePaid" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 291.0
margin_right = 391.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$52,077.37"
align = 1
valign = 1
autowrap = true

[node name="TotalPaid" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 395.0
margin_right = 495.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$100"
align = 1
valign = 1
autowrap = true

[node name="ExchangeSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 599.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$53,077.37"
align = 1
valign = 1
autowrap = true

[node name="TotalSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 603.0
margin_right = 703.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$75"
align = 1
valign = 1
autowrap = true

[node name="TotalGains" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 707.0
margin_right = 807.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$75"
align = 1
valign = 1
autowrap = true

[node name="PercentGains" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 811.0
margin_right = 903.0
margin_bottom = 52.0
rect_min_size = Vector2( 92, 52 )
text = "100.03%"
align = 1
valign = 1
autowrap = true

[node name="SelectedTrans" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 12.0
margin_right = 44.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 52 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
align = 1

[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/SelectedTrans" to="." method="_on_SelectedTrans_toggled"]
